secondfile/objects/RDS_Contact__c.object
<CustomObject>
    <description>Premise Details-Contact</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>RDS_Premise_Details_Number__r.DealHash__r.Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conact_Attention__c</fullName>
        <description>Premise Details-Contact-Conact Attention</description>
        <label>Contact Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Line_1__c</fullName>
        <description>Premise Details-Contact-Contact Address Line 1</description>
        <label>Contact Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Line_2__c</fullName>
        <description>Premise Details-Contact-Contact Address Line 2</description>
        <label>Contact Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <description>Premise Details-Contact-Contact City</description>
        <label>Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <description>Premise Details-Contact-Contact Country</description>
        <label>Contact Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Premise Details-Contact-Contact Email</description>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>Premise Details-Contact-First Name</description>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>Premise Details-Contact-Last Name</description>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Middle_Name__c</fullName>
        <description>Premise Details-Contact-Contact Middle Name</description>
        <label>Contact Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Number__c</fullName>
        <label>Contact Mobile Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Premise Details-Contact-Contact Phone</description>
        <label>Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <description>Premise Details-Contact-Contact State</description>
        <label>Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Strata__c</fullName>
        <description>Premise Details-Contact-Contact Strata</description>
        <label>Contact Strata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Premise Details-Contact-First Name-Contact Type</description>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zipcode_Extension__c</fullName>
        <description>Premise Details-Contact-Contact Zipcode Extension</description>
        <label>Contact Zipcode Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zipcode_GeoCode__c</fullName>
        <description>Premise Details-Contact-Contact Zipcode GeoCode</description>
        <label>Contact Zipcode GeoCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zipcode__c</fullName>
        <description>Premise Details-Contact-Contact Zipcode</description>
        <label>Contact Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Premise_Details_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Premise Details-Conrtacts-Premise Details Number</description>
        <label>RDS-Premise Details Number</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipLabel>RDS-Contact</relationshipLabel>
        <relationshipName>RDS_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RDS-Contact</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>RDS-Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RDS_Edit_Elasped_Period</fullName>
        <active>true</active>
        <description>RDS Edit Elasped Period</description>
        <errorConditionFormula>AND(OR(if (RDS_Premise_Details_Number__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),true,false),ISPICKVAL( RDS_Premise_Details_Number__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;, 
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;, $Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_after_Deal_Hash_creation_Con</fullName>
        <active>true</active>
        <errorConditionFormula>RDS_Premise_Details_Number__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM Admin&apos; &amp;&amp; NOT( ISNEW())</errorConditionFormula>
        <errorMessage>Record cannot be updated after Deal Hash has been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_RDSCon</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-Contact record.</errorMessage>
    </validationRules>
</CustomObject>